<resources>
    <string name="app_name">Hydro Carbon</string>

    <string name="nav_settings">Settings</string>
    <string name="activity_title_settings">Settings</string>

    <string name="nav_about_us">About Us</string>
    <string name="activity_title_about_us">About Us</string>

    <string name="activity_title_result">Quiz Result</string>

    <string name="activity_title_quiz">Quiz</string>

    <!-- Ex -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_quiz">Quiz</string>
    <string name="nav_ebook">E-Book</string>
    <string name="nav_dictionary">Dictionary</string>
    <string name="nav_practice">Practice</string>
    <string name="nav_tutorial_alkana">Alkana</string>
    <string name="nav_tutorial_alkuna">Alkuna</string>
    <string name="nav_tutorial_alkena">Alkena</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Alkana</item>
        <item>Alkena</item>
        <item>Alkuna</item>
        <item>E-Book</item>
        <item>Dictionary</item>
        <item>Quiz</item>
        <item>Practice</item>
    </string-array>

    <!-- Description -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod hendrerit sapien eget placerat. Interdum et malesuada fames ac ante ipsum primis in faucibus. </string>

    <!-- Menu e-book -->
    <string name="download">Download</string>

    <!-- Quiz -->
    <string-array name="quiz_range_question">
        <item>Semua kategori</item>
        <item>Alkana</item>
        <item>Alkena</item>
        <item>Alkuna</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
